--- a/TaskDesk_version2/TaskDesk_version2.csproj
+++ b/TaskDesk_version2/TaskDesk_version2.csproj
@@ -10,6 +10,8 @@
 
     <ItemGroup>
         <AvaloniaResource Include="Assets\**" />
+        <AvaloniaXaml Remove="App.axaml" />
+        <AvaloniaResource Include="App.axaml" />
     </ItemGroup>
 
     <ItemGroup>
