--- a/TaskDesk_version2/TaskDesk_version2.csproj
+++ b/TaskDesk_version2/TaskDesk_version2.csproj
@@ -12,6 +12,7 @@
         <AvaloniaResource Include="Assets\**" />
         <AvaloniaXaml Remove="App.axaml" />
         <AvaloniaResource Include="App.axaml" />
+        <AvaloniaXaml Remove="Themes\DarkTheme.axaml" />
     </ItemGroup>
 
     <ItemGroup>
